--- a/css/omyfood.css
+++ b/css/omyfood.css
@@ -175,26 +175,22 @@ figcaption {
 .heart {
   position: absolute;
   left: 90%;
-  z-index: 3;
-}
-.heart:hover {
-  animation: fullheart 0ms both;
+  animation: fullheart;
 }
 
 .fullHeart {
-  position: absolute;
   left: 90%;
+  position: absolute;
   color: purple;
-  z-index: 2;
-  overflow: hidden;
+  opacity: 0%;
 }
 
 @keyframes fullheart {
   0% {
-    transform: translateX(-9999px);
+    opacity: 0%;
   }
   100% {
-    transform: translateX(0);
+    opacity: 100%;
   }
 }
 
