--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -1,5 +1,10 @@
+
 $colour-primary: #f6f6f6;
 $colour-secondary:#d4d4d4;
 $colour-grey: #eaeaea;
 $colour-footer: #353535;
 $colour-puce: #9356dc;
+$maxWidth:100%;
+$smallWidth:50%;
+$largeWidth:75%;
+$mediumWidth:60%;
