--- a/omyfood.scss
+++ b/omyfood.scss
@@ -2,17 +2,22 @@
 body {
     max-width: $maxWidth;
     margin: 0;
-    
+}
+.image {
+    text-align: center;
+}
+.logoMainpage {
+    width: 200px;
 }
 .logo-titre{
-    width: 200px;
     margin-left: $maxWidth+(-$smallWidth) ;   
+    width: 200px;     
 }
 .homepage-header
 {
     text-align: center;
     box-shadow: 0 -2px 0 $colour-secondary;
-    width: fit-content;
+    width: $maxWidth;
     background-color: $colour-primary;
     padding-bottom: 3em;
     &__position{
@@ -159,6 +164,7 @@ li::before {
     padding-right: 2em;
     position: relative;
     overflow: hidden;
+    opacity: 1;
     &:hover  .box {
         animation: boxe 1s both;
     }
@@ -218,6 +224,9 @@ li::before {
         }
     }
 }
+.containBtn {
+    text-align: center;
+}
 .btn-order {
     color: $colour-primary;
     border-radius: 20px;
@@ -226,7 +235,6 @@ li::before {
     font-weight: bold;
     padding: 1em 6em;
     margin: 2em;
-    margin-left: $maxWidth+(-$smallWidth) ;
     margin-bottom: 4em;
 }
 figcaption {
@@ -241,7 +249,7 @@ figcaption {
     left: 90%;
     position: absolute;
     color: $colour-puce;
-    opacity: 0%;
+    opacity: 0;
     z-index: 2;
     &:hover{
         animation: fullheart 200ms both;
@@ -257,35 +265,29 @@ figcaption {
 }
 @keyframes fullheart {
 	0% {
-		opacity:0%;
+		opacity:0;
 	}
 	100% {
-		opacity: 100%;
+		opacity: 1;
 	}
 }
 @keyframes plat {
 	0% {
-        opacity:0%;
+        opacity:0;
         transform: translateY(50px);
     }
    
 	100% {
-        opacity: 100%;
+        opacity: 1;
         transform: translateY(-5px);
     }
 }
 @media (min-width:600px) and (max-width: 1023px) {
-    .btn-order {
-        margin-left: $maxWidth+(-$mediumWidth) ;
-    }
     .logo-titre{
         margin-left: $maxWidth+(-$mediumWidth) ;
     } 
 }
 @media (max-width: 599px) {
-    .btn-order {
-        margin-left: $maxWidth+(-$largeWidth) ;
-    }
     .logo-titre{
         margin-left: $maxWidth+(-$largeWidth) ;
     } 
