--- a/omyfood.scss
+++ b/omyfood.scss
@@ -93,12 +93,18 @@ li::before {
         box-shadow: 2px 2px 3px$colour-secondary ;
         background-color: white;
         border-radius: 10%;
-        padding-bottom: 1em;
+        padding-bottom: 0.5em;
         & figcaption {
             padding-left: 2em;
+            & h2 {
+                font-size: 17px;
+                margin-bottom: 0;
+            }
             & p{
                 display: flex;
                 justify-content:space-between;
+                font-size: 15px;
+                margin-top: 0;
             }
             
         }  
@@ -242,10 +248,12 @@ figcaption {
 }
 .heart{ 
    position: absolute;
+   bottom: 0.5em;
    left: 90%; 
     z-index: 1;
 }
 .fullHeart{
+    bottom: 0.5em;
     left: 90%;
     position: absolute;
     color: $colour-puce;
@@ -293,7 +301,17 @@ figcaption {
     } 
 }
 @media (min-width: 1200px) {
-    .homepage-restaurant__image figcaption{ 
-        padding-left: 5em;
+    .homepage-restaurant__image{
+        margin: auto;
+        margin-bottom: 3em;
+        width: $largeWidth;
+        & figcaption{ 
+            padding-left: 7em;
+        }
+    }
+}
+@media (min-width: 1650px) {
+    .homepage-restaurant__image{
+        width: $mediumWidth;
     }
 }
