--- a/omyfood.scss
+++ b/omyfood.scss
@@ -1,268 +1,10 @@
 @import "./utils/variables";
-body {
-    max-width: $maxWidth;
-    margin: 0;
-}
-.image {
-    text-align: center;
-}
-.logoMainpage {
-    width: 200px;
-}
-.logo-titre{
-    margin-left: $maxWidth+(-$smallWidth) ;   
-    width: 200px;     
-}
-.homepage-header
-{
-    text-align: center;
-    box-shadow: 0 -2px 0 $colour-secondary;
-    width: $maxWidth;
-    background-color: $colour-primary;
-    padding-bottom: 3em;
-    &__position{
-        text-decoration: none;
-        background-color: $colour-grey;
-        padding: 1em;
-        & a {
-            text-decoration: none;
-            color: black;
-        }
-    }
-    & .btnmenu {
-        color: $colour-primary;
-        border-radius: 20px;
-        background: linear-gradient(to right bottom, #f174da, #9d59dc);
-        box-shadow: 0 8px 16px $colour-primary;
-        padding: 1em 2em;
-
-    }
-    & p {
-        padding: 1em;
-        color: #616161;
-    }
-}
-
-li {
-    box-shadow: 2px 2px 3px $colour-secondary;
-    background-color:$colour-primary ;
-    margin: 1em;
-    margin-left: 0;
-    padding: 1em;
-    padding-left: 0;
-    list-style: none;
-    border-radius: 18px;
-    counter-increment: li;
-    
-    &:hover {
-        background-color:#f5edff;
-        & i {
-        color: #9356dc;
-        }
-    } 
-}
-h1 {
-    padding-left: 0.5em;
-}
-li::before {
-    content: counter(li); color:white; 
-    background-color: $colour-puce;
-    border-radius: 50%;
-    padding: 0.5em;
-    padding-left: 0.7em;
-    padding-right: 0.7em;
-    margin-left: -0.5em;
-    margin-right: 0.5em;
-}
-.homepage-menu i {
-    margin-right: 1em;
-}
-.homepage-restaurant {
-    background-color: $colour-primary ;
-    padding-bottom: 1em;
-    & img{
-        border-radius: 10% 10% 0 0;
-        max-width: $maxWidth;
-        max-height: $maxWidth;
-    }
-    & a {
-        text-decoration: none;
-        color: black;
-    }
-    &__image {
-        box-shadow: 2px 2px 3px$colour-secondary ;
-        background-color: white;
-        border-radius: 10%;
-        padding-bottom: 0.5em;
-        & figcaption {
-            padding-left: 2em;
-            & h2 {
-                font-size: 17px;
-                margin-bottom: 0;
-            }
-            & p{
-                display: flex;
-                justify-content:space-between;
-                font-size: 15px;
-                margin-top: 0;
-            }
-            
-        }  
-    }
-}
-.homepage-footer {
-    color: white;
-    background-color: $colour-footer;
-    padding: 0.5em;
-    & a {
-        color: white;
-        text-decoration: none;
-    }
-    & .logo{
-        width: 100px;
-        filter: invert(100%);
-        margin-left: -2.5em;
-    }
-    & p{
-        margin-top: -9px;
-    }
-}
-.menu-header figure{
-    display: flex;
-    flex-direction: row;
-    & a{
-        padding-top: 1em;
-    }
-}
-.photoRestaurant{
-        max-width: $maxWidth;
-        max-height: $maxWidth;
-        position: relative;   
-} 
-.contain{
-    position: absolute;
-    width: $maxWidth;  
-}
-.Menu-plat{
-    background-color: $colour-primary ;
-    padding-left: 5px;
-    margin-top: -3em;
-    padding-top: 2em;
-    border-radius: 45px 45px 0 0;
-    & h1 {
-        display: flex;
-        justify-content: space-between;
-        font-size: 30px;
-    }
-    & h3 {
-        padding-top: 2em;
-    }
-    & span{
-        border-bottom:solid 3px #99e2d0;
-    } 
-}
-.plats {
-    background-color: white;
-    box-shadow: -4px 4px 6px #e7e7e7;
-    border-radius: 15px;
-    margin: 1em;
-    padding-left: 1em;
-    padding-right: 2em;
-    position: relative;
-    overflow: hidden;
-    opacity: 1;
-    &:hover  .box {
-        animation: boxe 1s both;
-    }
-    &:hover  .valid{
-        transform: rotate(360deg);
-    }
-    &:hover  span {
-        transform: translateX(-($maxWidth+(251%)));
-    }
-    &:hover h4 {
-        width: $mediumWidth;
-    }
-    &:hover strong {
-        width: $mediumWidth;
-    }  
-    animation: plat 800ms both;
-    @for $i from 1t to 11 {
-        &#{$i} {
-            animation-delay: 200ms * $i;
-            }
-        }
-    & .box {
-        left: $maxWidth;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-         width: 100px;
-         height: 80px;
-         background-color: #99e2d0;
-         color: white; 
-         position: absolute;
-        & .valid{
-           transition: transform 500ms 100ms ease-in-out;
-        }
-    }
-    & h4{
-        margin-bottom: -8px;
-        width: $maxWidth;
-        white-space: nowrap;
-        overflow: hidden;
-        text-overflow: ellipsis;
-    }
-    & p{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        & strong {
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
-            font-weight: normal;
-        }
-        & span{
-            border-bottom: none;
-            font-weight: bold;
-            transition: transform 750ms  ease-in-out ;
-        }
-    }
-}
-.containBtn {
-    text-align: center;
-}
-.btn-order {
-    color: $colour-primary;
-    border-radius: 20px;
-    background: linear-gradient(to right bottom,#f174da,#9d59dc) ;
-    box-shadow: 5px 8px 16px $colour-primary;
-    font-weight: bold;
-    padding: 1em 6em;
-    margin: 2em;
-    margin-bottom: 4em;
-}
-figcaption {
-    position: relative;
-}
-.heart{ 
-   position: absolute;
-   bottom: 0.5em;
-   left: 90%; 
-    z-index: 1;
-}
-.fullHeart{
-    bottom: 0.5em;
-    left: 90%;
-    position: absolute;
-    color: $colour-puce;
-    opacity: 0;
-    z-index: 2;
-    &:hover{
-        animation: fullheart 200ms both;
-    }
-}
+@import "./base/base";
+@import "./composants/button";
+@import "./layouts/header";
+@import "./layouts/footer";
+@import "./pages/homepage";
+@import "./pages/menupage";
 @keyframes boxe {
     0%{
         transform: translateX(0);
