--- a/css/omyfood.css
+++ b/css/omyfood.css
@@ -1,18 +1,24 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap");
 body {
   max-width: 100%;
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 h1 {
-  padding-left: 0.5em;
+  padding-left: 1em;
 }
 
 .btnmenu {
   color: #f6f6f6;
   border-radius: 20px;
+  border: none;
+  box-shadow: 0px 6px 4px #cacaca;
   background: linear-gradient(to right bottom, #f174da, #9d59dc);
-  box-shadow: 0 8px 16px #f6f6f6;
   padding: 1em 2em;
+  font-weight: bold;
+  outline: none;
 }
 
 .containBtn {
@@ -22,12 +28,14 @@ h1 {
 .btn-order {
   color: #f6f6f6;
   border-radius: 20px;
+  border: none;
   background: linear-gradient(to right bottom, #f174da, #9d59dc);
-  box-shadow: 5px 8px 16px #f6f6f6;
+  box-shadow: 0px 6px 4px #cacaca;
   font-weight: bold;
   padding: 1em 6em;
   margin: 2em;
   margin-bottom: 4em;
+  outline: none;
 }
 
 .homepage-header {
@@ -47,7 +55,7 @@ h1 {
   color: black;
 }
 .homepage-header p {
-  padding: 1em;
+  padding: 1em 2em;
   color: #616161;
 }
 
@@ -97,15 +105,18 @@ h1 {
 }
 
 li {
-  box-shadow: 2px 2px 3px #d4d4d4;
+  box-shadow: 4px 4px 9px #cacaca;
   background-color: #f6f6f6;
   margin: 1em;
-  margin-left: 0;
+  margin-left: -1em;
   padding: 1em;
   padding-left: 0;
   list-style: none;
   border-radius: 18px;
   counter-increment: li;
+}
+li i {
+  padding-left: 0.5em;
 }
 li:hover {
   background-color: #f5edff;
@@ -117,12 +128,13 @@ li:hover i {
 li::before {
   content: counter(li);
   color: white;
+  font-size: 10px;
   background-color: #9356dc;
   border-radius: 50%;
   padding: 0.5em;
   padding-left: 0.7em;
   padding-right: 0.7em;
-  margin-left: -0.5em;
+  margin-left: -0.7em;
   margin-right: 0.5em;
 }
 
@@ -132,25 +144,45 @@ li::before {
 
 .homepage-restaurant {
   background-color: #f6f6f6;
+  padding-top: 15px;
   padding-bottom: 1em;
 }
 .homepage-restaurant img {
-  border-radius: 10% 10% 0 0;
+  border-radius: 5% 5% 0 0;
   max-width: 100%;
-  max-height: 100%;
+  max-height: 70%;
+}
+.homepage-restaurant .new {
+  width: 80px;
+  height: 30px;
+  background-color: #99e2d0;
+  position: absolute;
+  top: 5%;
+  left: 70%;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #2da285;
+  font-weight: bold;
 }
 .homepage-restaurant a {
   text-decoration: none;
   color: black;
 }
 .homepage-restaurant__image {
-  box-shadow: 2px 2px 3px #d4d4d4;
+  position: relative;
+  z-index: 1;
+  height: 50%;
+  margin-left: 1.5em;
+  margin-right: 1.5em;
+  box-shadow: 4px 4px 9px #cacaca;
   background-color: white;
-  border-radius: 10%;
-  padding-bottom: 0.5em;
+  border-radius: 5%;
+  padding-bottom: 3px;
 }
 .homepage-restaurant__image figcaption {
-  padding-left: 2em;
+  padding-left: 1em;
   position: relative;
 }
 .homepage-restaurant__image figcaption h2 {
@@ -183,6 +215,14 @@ li::before {
   animation: fullheart 200ms both;
 }
 
+@keyframes fullheart {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 .contain {
   position: absolute;
   width: 100%;
@@ -192,16 +232,21 @@ li::before {
   background-color: #f6f6f6;
   padding-left: 5px;
   margin-top: -3em;
-  padding-top: 2em;
+  padding-top: 1em;
   border-radius: 45px 45px 0 0;
 }
 .Menu-plat h1 {
+  font-family: "Fredoka One", cursive;
+  font-style: italic;
+  padding-left: 0.5em;
   display: flex;
   justify-content: space-between;
   font-size: 30px;
 }
 .Menu-plat h3 {
-  padding-top: 2em;
+  padding-top: 1.5em;
+  padding-left: 1em;
+  font-weight: normal;
 }
 .Menu-plat span {
   border-bottom: solid 3px #99e2d0;
@@ -235,10 +280,10 @@ li::before {
   transform: translateX(-351%);
 }
 .plats:hover h4 {
-  width: 60%;
+  width: 50%;
 }
 .plats:hover strong {
-  width: 60%;
+  width: 50%;
 }
 .plats1 {
   animation-delay: 200ms;
@@ -276,7 +321,7 @@ li::before {
   align-items: center;
   justify-content: center;
   width: 100px;
-  height: 80px;
+  height: 100px;
   background-color: #99e2d0;
   color: white;
   position: absolute;
@@ -308,22 +353,6 @@ li::before {
   transition: transform 750ms ease-in-out;
 }
 
-@keyframes boxe {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-101%);
-  }
-}
-@keyframes fullheart {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 @keyframes plat {
   0% {
     opacity: 0;
@@ -332,6 +361,14 @@ li::before {
   100% {
     opacity: 1;
     transform: translateY(-5px);
+  }
+}
+@keyframes boxe {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-101%);
   }
 }
 @media (min-width: 600px) and (max-width: 1023px) {
@@ -349,9 +386,6 @@ li::before {
     margin: auto;
     margin-bottom: 3em;
     width: 75%;
-  }
-  .homepage-restaurant__image figcaption {
-    padding-left: 7em;
   }
 }
 @media (min-width: 1650px) {
