--- a/layouts/_header.scss
+++ b/layouts/_header.scss
@@ -15,8 +15,9 @@
         }
     }
     & p {
-        padding: 1em;
+        padding: 1em 2em ;
         color: #616161;
+        
     }
 }       
 .image {
