--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -3,7 +3,8 @@ $colour-primary: #f6f6f6;
 $colour-secondary:#d4d4d4;
 $colour-grey: #eaeaea;
 $colour-footer: #353535;
-$colour-puce: #9356dc;
+$colour-list: #9356dc;
+$colour-shadow: #cacaca;
 $maxWidth:100%;
 $smallWidth:50%;
 $largeWidth:75%;
