--- a/utils/_variables.scss
+++ b/utils/_variables.scss
@@ -1,10 +1,13 @@
 
 $colour-primary: #f6f6f6;
 $colour-secondary:#d4d4d4;
-$colour-grey: #eaeaea;
+$colour-header: #eaeaea;
 $colour-footer: #353535;
 $colour-list: #9356dc;
 $colour-shadow: #cacaca;
+$basic-colour: #ffff;
+$colour-btn1: #f174da;
+$colour-btn2:#9d59dc;
 $maxWidth:100%;
 $smallWidth:50%;
 $largeWidth:75%;
