--- a/pages/_menupage.scss
+++ b/pages/_menupage.scss
@@ -33,7 +33,7 @@
     }
 }
 .plats {
-    background-color: white;
+    background-color: $basic-colour;
     box-shadow: -4px 4px 6px #e7e7e7;
     border-radius: 15px;
     margin: 1em;
@@ -71,7 +71,7 @@
          width: 100px;
          height: 100px;
          background-color: #99e2d0;
-         color: white; 
+         color: $basic-colour; 
          position: absolute;
         & .valid{
            transition: transform 500ms 100ms ease-in-out;
