--- a/layouts/_header.scss
+++ b/layouts/_header.scss
@@ -27,7 +27,7 @@
     width: 200px;
 }
 .logo-titre{
-    margin-left: $maxWidth+(-$largeWidth) ;   
+    margin-left: $maxWidth+(-$smallWidth) ;   
     width: 200px;     
 }
 .menu-header figure{
